--- a/MediaPlayerView/src/main/res/values/strings.xml
+++ b/MediaPlayerView/src/main/res/values/strings.xml
@@ -3,7 +3,11 @@
 
     <string name="hours_minutes_seconds">%02d:%02d:%02d</string>
     <string name="minutes_seconds">%02d:%02d</string>
-    <string name="progress_duration">%s/%s</string>
-    <string name="button_to_pause_and_resume_the_music">Button to pause and resume the music</string>
+    <string name="title">Title</string>
+    <string name="artist">Artist</string>
+    <string name="zero_zero">00:00</string>
+    <string name="cover_image">Cover image</string>
+    <string name="media_button">Media button</string>
+    <string name="could_not_load_this_resource">Could not load this resource</string>
 
 </resources>
